fix latest grid spacing II

--- a/css/site.css
+++ b/css/site.css
@@ -887,6 +887,9 @@ img {
   max-width: 100%;
   height: auto;
 }
+a > img {
+  vertical-align: top;
+}
 h1,
 h2,
 h3,
